--- a/src/App.css
+++ b/src/App.css
@@ -39,12 +39,52 @@
 
 .app-container {
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding-top: 8vh;
+    gap: 8vw;
+    font-size: clamp(1rem, 2vw, 2rem) !important;
+}
+
+.text-container,
+embed {
+    padding: 0px;
+    margin: 0px;
+    height: 80vh;
+    width: 40vw;
 }
 
 textarea {
-    height: 128px;
-    width: 1000px;
+    box-sizing: border-box;
+    height: 100%;
+    width: 100%;
+}
+
+.text-container {
+    display: flex;
+    flex-direction: column;
+}
+
+.menu-bar {
+    background-color: #f2f2f2;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+    padding: 6px 0px;
+}
+
+.menu-list {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+}
+
+.menu-list li {
+    font-size: clamp(1vw, 1vw, 2vw);
+    margin-right: 1.5vw;
+    cursor: pointer;
+    font-family: Arial, sans-serif;
+}
+
+.menu-list li:hover {
+    text-decoration: underline;
 }
