Update CSS to be responsive

--- a/src/App.css
+++ b/src/App.css
@@ -42,7 +42,7 @@
     justify-content: center;
     align-items: center;
     padding-top: 8vh;
-    gap: 8vw;
+    justify-content: space-evenly;
     font-size: clamp(1rem, 2vw, 2rem) !important;
 }
 
