--- a/src/App.css
+++ b/src/App.css
@@ -101,4 +101,12 @@ input {
         flex-direction: column;
         gap: 1em;
     }
+
+    .text-container,
+    embed {
+        padding: 0px;
+        margin: 0px;
+        height: 60vh;
+        width: 80vw;
+    }
 }
